--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@
 @import '../components/nav/_nav.scss';
 @import '../components/table/_table.scss';
 @import '../components/modal/_modal.scss';
+@import '../components/toast/_toast.scss';
 @import '../components/dashboard/_dashboard.scss';
 @import '../components/stats/_stats.scss';
 @import '../components/tabs/_tabs.scss';
